# xenmorph

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: out.parquet  run_metadata.json
src/xenmorph/: cli.py  io.py  metrics.py
src/xenmorph/cli/: __init__.py  main.py  metrics_compute.py
src/xenmorph/io/: xenium.py
src/xenmorph/metrics/: core.py
tests/: test_cli.py  test_metrics_polygon.py  test_schema.py
