[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xenmorph"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "shapely>=2.0",
  "pyarrow",
  "typer[all]",
  "tifffile",
  "imageio>=2.34",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
xenmorph = "xenmorph.cli:main"
